# datarod

./: .gitignore  INSTALLATION.md  README.md  dev.env.secret  docker-compose.prod.yaml  docker-compose.yaml  prod.env.secret
.gitsecret/keys/: pubring.kbx  trustdb.gpg
.gitsecret/paths/: mapping.cfg
backend/: .editorconfig  Dockerfile  manage.py  pyproject.toml
backend/api/: middleware.py  schema.py  types.py  utils.py
backend/archive/: admin.py  models.py
backend/archive/management/commands/: backfill_nickname_colors.py  import_legacy_html.py  import_newer_html.py
backend/archive/migrations/: 0001_initial.py  0002_remove_author_name_remove_nickname_author_and_more.py  0003_alter_nickname_name.py  0004_alter_tag_tag_type.py  0005_nickname_color.py  0006_tag_banner.py
backend/bot/: client.py  jobs.py  utils.py
backend/bot/management/commands/: runbot.py
backend/datarod/: asgi.py  settings.py  settings_prod.py  urls.py  wsgi.py
backend/utils/: auth.py  environment.py  models.py
docker/mysql/mounts/: permissions.sql
frontend/: .editorconfig  .env.development  .env.production  Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  constants.ts  index.css  main.tsx  queries.ts  types.ts
frontend/src/components/: index.ts
frontend/src/components/AuthRequired/: AuthRequired.tsx  index.ts
frontend/src/components/Breadcrumbs/: Breadcrumbs.tsx  index.ts
frontend/src/providers/: ClientProvider.tsx  MeProvider.tsx  RecentChannelsProvider.tsx
frontend/src/utils/: tags.ts
(+39 files in other folders)
