[tool.poetry]
name = "datarod"
version = "0.1.0"
description = "Phoenix Archive (datarod)"
authors = ["Winston Astrachan <winston.astrachan@gmail.com>"]
readme = "../README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.7"
gunicorn = "^22.0.0"
discord-py = "^2.4.0"
mysqlclient = "^2.2.4"
django-rq = "^2.10.2"
requests = "^2.32.3"
graphene-django = "^3.2.2"
django-filter = "^24.2"
social-auth-app-django = "^5.4.2"
django-cors-headers = "^4.4.0"
beautifulsoup4 = "^4.12.3"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
isort = "^5.13.2"

[tool.isort]
profile = "black"
default_section = "THIRDPARTY"
known_django = "django"
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "DJANGO", "FIRSTPARTY", "LOCALFOLDER"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
